# brownian-brush

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: animation.py  equations.py  image_processing.py  rendering.py  sampling.py  utils.py
tests/: test_equations.py  test_image_processing.py  test_rendering.py  test_sampling.py
