[project]
name = "brownian-brush"
version = "0.1.0"
description = "Stochastic image reconstruction using dots, Brownian strokes, and edge-weighted sampling."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
